포트폴리오

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -62,7 +62,7 @@ h5 {
   position: relative;
   width: 100%;
   height: 100vh;
-  background: url(../images/화면\ 캡처\ 2023-06-08\ 221203.png);
+  background: url(../images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
