포트폴리오

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -63,6 +63,7 @@ h5 {
 }
 
 .intro {
+  display: flex;
   position: relative;
   width: 100%;
   height: 100vh;
@@ -72,29 +73,34 @@ h5 {
 
   .intro_box {
     padding-left: 100px;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 70vh;
+    align-items: center;
 
-    p {
-      font-size: 32px;
+    span {
+      font-size: 34px;
       font-weight: 700;
       color: #fff;
-
-      &:nth-child(2),
-      &:nth-child(3),
-      &:nth-child(4) {
-        padding-left: 67px;
+      letter-spacing: 1px;
+      .under {
+        position: relative;
       }
-
-      &:nth-child(5) {
-        padding-left: 210px;
+      .under::before{
+        content: '';
+        display: block;
+        position: absolute;
+        bottom: -5px;
+        left: 0;
+        width: 100%;
+        height: 5px;
+        background-color: yellow;
       }
+    }
 
-      span {
-        padding-right: 15px;
-      }
+    .typing {
+      margin-top: 50px;
     }
   }
 
