--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -59,6 +58,7 @@ h5 {
 }
 
 .intro {
+  display: flex;
   position: relative;
   width: 100%;
   height: 100vh;
@@ -68,22 +68,31 @@ h5 {
 }
 .intro .intro_box {
   padding-left: 100px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  height: 70vh;
+  align-items: center;
 }
-.intro .intro_box p {
-  font-size: 32px;
+.intro .intro_box span {
+  font-size: 34px;
   font-weight: 700;
   color: #fff;
+  letter-spacing: 1px;
 }
-.intro .intro_box p:nth-child(2), .intro .intro_box p:nth-child(3), .intro .intro_box p:nth-child(4) {
-  padding-left: 67px;
+.intro .intro_box span .under {
+  position: relative;
 }
-.intro .intro_box p:nth-child(5) {
-  padding-left: 210px;
+.intro .intro_box span .under::before {
+  content: "";
+  display: block;
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 5px;
+  background-color: yellow;
 }
-.intro .intro_box p span {
-  padding-right: 15px;
+.intro .intro_box .typing {
+  margin-top: 50px;
 }/*# sourceMappingURL=main.css.map */
