--- a/CSS/main.css
+++ b/CSS/main.css
@@ -95,4 +95,21 @@ h5 {
 }
 .intro .intro_box .typing {
   margin-top: 50px;
+}
+.intro .intro_box .typing .text {
+  color: cornflowerblue;
+}
+.intro .intro_box .typing .text::after {
+  content: "";
+  margin-left: 0.4rem;
+  border-right: 2px solid #777;
+  animation: cursor 0.9s infinite steps(2);
+}
+@keyframes cursor {
+  from {
+    border-right: 2px solid #222;
+  }
+  to {
+    border-right: 2px solid #777;
+  }
 }/*# sourceMappingURL=main.css.map */
