포트폴리오

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -1,11 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: 'Noto Sans KR', sans-serif;
   color: #222;
+  line-height: 1.5;
 }
 
 li {
@@ -14,6 +16,11 @@ li {
 
 a {
   text-decoration: none;
+  color: #222;
+}
+
+img {
+  display: block;
 }
 
 h1,
@@ -32,12 +39,23 @@ h5 {
   color: rgba(255, 255, 0, 0.889);
 }
 
+.tit {
+  font-weight: bolder;
+  font-size: 28px;
+}
+
+.wrap {
+  overflow: hidden;
+}
+
+// 헤더
 .header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba($color: #ccc, $alpha: 0.8);
+  background: none;
+  background-color: rgba($color: #ccc, $alpha: 0.9);
   z-index: 9999;
 
   ul {
@@ -52,6 +70,11 @@ h5 {
         font-weight: 700;
         font-size: 24px;
         padding: 20px 25px;
+
+        &.on {
+          color: blue;
+        }
+
       }
     }
   }
@@ -62,9 +85,9 @@ h5 {
   margin: 0 auto;
 }
 
-.intro {
+// 인트로코드
+#intro {
   display: flex;
-  position: relative;
   width: 100%;
   height: 100vh;
   background: url(../images/background.png);
@@ -72,7 +95,6 @@ h5 {
   background-size: cover;
 
   .intro_box {
-    padding-left: 100px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -80,13 +102,14 @@ h5 {
     align-items: center;
 
     span {
-      font-size: 34px;
+      font-size: 50px;
       font-weight: 700;
       color: #fff;
-      letter-spacing: 1px;
+      letter-spacing: 2px;
 
       .under {
         position: relative;
+        font-size: 60px;
       }
 
       .under::before {
@@ -101,10 +124,24 @@ h5 {
       }
     }
 
-    .typing {
-      margin-top: 50px;
+    .bar {
+      width: 300px;
+      margin: 60px auto;
+      color: #777;
+    }
 
-      .text{color: cornflowerblue;}
+    .typing {
+      padding-bottom: 70px;
+
+      span {
+        font-weight: 400;
+        font-size: 45px;
+      }
+
+      .text {
+        color: cornflowerblue;
+        font-weight: 700;
+      }
 
       .text::after {
         content: '';
@@ -123,6 +160,119 @@ h5 {
         }
       }
     }
+
+    .down {
+      position: absolute;
+      bottom: 60px;
+      animation: ani 2s infinite;
+
+      @keyframes ani {
+        0% {
+          bottom: 60px;
+        }
+
+        40% {
+          bottom: 40px;
+        }
+
+        100% {
+          bottom: 60px;
+        }
+      }
+
+      span,
+      i {
+        display: block;
+        text-align: center;
+        color: #ccc;
+      }
+
+      .scroll_text {
+        span {
+          line-height: 25px;
+          font-size: 26px;
+        }
+      }
+
+      .down_icon {
+        padding-top: 10px;
+
+        i {
+          font-size: 34px;
+          font-weight: 700;
+          line-height: 30px;
+
+        }
+      }
+    }
+  }
+}
+
+
+// 프로필
+#profile {
+  padding: 60px 0;
+  height: 100vh;
+
+  h1 {
+    text-align: center;
+    font-size: 45px;
+    padding-bottom: 40px;
   }
 
+  .row {
+    display: flex;
+
+    .profile_img {
+      img {
+        display: block;
+        width: 400px;
+        height: 520px;
+      }
+    }
+
+    .about_me {
+      padding-left: 40px;
+
+      ul {
+        li {
+          margin-bottom: 15px;
+
+          p,
+          a {
+            font-size: 20px;
+          }
+        }
+      }
+    }
+
+    .education {
+      padding-left: 40px;
+    }
+  }
+}
+
+
+
+
+//반응형 코드
+@media (max-width:1280px) {
+  .intro {
+    .intro_box {
+      span {
+        font-size: 40px;
+
+        .under {
+          font-size: 48px;
+        }
+      }
+
+      .typing {
+        span {
+          font-size: 36px;
+
+        }
+      }
+    }
+  }
 }
