--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,11 +1,13 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   font-family: "Noto Sans KR", sans-serif;
   color: #222;
+  line-height: 1.5;
 }
 
 li {
@@ -14,6 +16,11 @@ li {
 
 a {
   text-decoration: none;
+  color: #222;
+}
+
+img {
+  display: block;
 }
 
 h1,
@@ -32,12 +39,22 @@ h5 {
   color: rgba(255, 255, 0, 0.889);
 }
 
+.tit {
+  font-weight: bolder;
+  font-size: 28px;
+}
+
+.wrap {
+  overflow: hidden;
+}
+
 .header {
   width: 100%;
   position: fixed;
   top: 0;
   left: 0;
-  background-color: rgba(204, 204, 204, 0.8);
+  background: none;
+  background-color: rgba(204, 204, 204, 0.9);
   z-index: 9999;
 }
 .header ul {
@@ -51,39 +68,41 @@ h5 {
   font-size: 24px;
   padding: 20px 25px;
 }
+.header ul li a.on {
+  color: blue;
+}
 
 .container {
   width: 1280px;
   margin: 0 auto;
 }
 
-.intro {
+#intro {
   display: flex;
-  position: relative;
   width: 100%;
   height: 100vh;
   background: url(../images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
 }
-.intro .intro_box {
-  padding-left: 100px;
+#intro .intro_box {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.intro .intro_box span {
-  font-size: 34px;
+#intro .intro_box span {
+  font-size: 50px;
   font-weight: 700;
   color: #fff;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
 }
-.intro .intro_box span .under {
+#intro .intro_box span .under {
   position: relative;
+  font-size: 60px;
 }
-.intro .intro_box span .under::before {
+#intro .intro_box span .under::before {
   content: "";
   display: block;
   position: absolute;
@@ -93,13 +112,23 @@ h5 {
   height: 5px;
   background-color: yellow;
 }
-.intro .intro_box .typing {
-  margin-top: 50px;
+#intro .intro_box .bar {
+  width: 300px;
+  margin: 60px auto;
+  color: #777;
 }
-.intro .intro_box .typing .text {
+#intro .intro_box .typing {
+  padding-bottom: 70px;
+}
+#intro .intro_box .typing span {
+  font-weight: 400;
+  font-size: 45px;
+}
+#intro .intro_box .typing .text {
   color: cornflowerblue;
+  font-weight: 700;
 }
-.intro .intro_box .typing .text::after {
+#intro .intro_box .typing .text::after {
   content: "";
   margin-left: 0.4rem;
   border-right: 2px solid #777;
@@ -111,5 +140,82 @@ h5 {
   }
   to {
     border-right: 2px solid #777;
+  }
+}
+#intro .intro_box .down {
+  position: absolute;
+  bottom: 60px;
+  animation: ani 2s infinite;
+}
+@keyframes ani {
+  0% {
+    bottom: 60px;
+  }
+  40% {
+    bottom: 40px;
+  }
+  100% {
+    bottom: 60px;
+  }
+}
+#intro .intro_box .down span,
+#intro .intro_box .down i {
+  display: block;
+  text-align: center;
+  color: #ccc;
+}
+#intro .intro_box .down .scroll_text span {
+  line-height: 25px;
+  font-size: 26px;
+}
+#intro .intro_box .down .down_icon {
+  padding-top: 10px;
+}
+#intro .intro_box .down .down_icon i {
+  font-size: 34px;
+  font-weight: 700;
+  line-height: 30px;
+}
+
+#profile {
+  padding: 60px 0;
+  height: 100vh;
+}
+#profile h1 {
+  text-align: center;
+  font-size: 45px;
+  padding-bottom: 40px;
+}
+#profile .row {
+  display: flex;
+}
+#profile .row .profile_img img {
+  display: block;
+  width: 400px;
+  height: 520px;
+}
+#profile .row .about_me {
+  padding-left: 40px;
+}
+#profile .row .about_me ul li {
+  margin-bottom: 15px;
+}
+#profile .row .about_me ul li p,
+#profile .row .about_me ul li a {
+  font-size: 20px;
+}
+#profile .row .education {
+  padding-left: 40px;
+}
+
+@media (max-width: 1280px) {
+  .intro .intro_box span {
+    font-size: 40px;
+  }
+  .intro .intro_box span .under {
+    font-size: 48px;
+  }
+  .intro .intro_box .typing span {
+    font-size: 36px;
   }
 }/*# sourceMappingURL=main.css.map */
