--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -212,7 +212,6 @@ h5 {
 // 프로필
 #profile {
   padding: 60px 0;
-  height: 100vh;
 
   h1 {
     text-align: center;
@@ -222,33 +221,37 @@ h5 {
 
   .row {
     display: flex;
+    justify-content: space-between;
+
+    p,
+    a {
+      font-size: 20px;
+    }
 
     .profile_img {
+      width: 380px;
+      overflow: hidden;
+
       img {
         display: block;
-        width: 400px;
-        height: 520px;
+        width: 100%;
+        height: 500px;
       }
     }
 
     .about_me {
-      padding-left: 40px;
+      margin-left: 40px;
 
       ul {
         li {
           margin-bottom: 15px;
 
-          p,
-          a {
-            font-size: 20px;
-          }
+
         }
       }
     }
 
-    .education {
-      padding-left: 40px;
-    }
+    .education {}
   }
 }
 
@@ -257,7 +260,7 @@ h5 {
 
 //반응형 코드
 @media (max-width:1280px) {
-  .intro {
+  #intro {
     .intro_box {
       span {
         font-size: 40px;
@@ -271,6 +274,95 @@ h5 {
         span {
           font-size: 36px;
 
+        }
+      }
+    }
+  }
+}
+
+
+//모바일
+@media (max-width:680px) {
+  #intro {
+    .intro_box {
+      span {
+        font-size: 20px;
+
+        .under {
+          font-size: 26px;
+        }
+      }
+
+      .typing {
+        span {
+          font-size: 18px;
+
+        }
+      }
+
+      .down {
+        position: absolute;
+        animation: ani 2s infinite;
+  
+        @keyframes ani {
+          0% {
+            bottom: 25px;
+          }
+  
+          40% {
+            bottom: 10px;
+          }
+  
+          100% {
+            bottom: 25px;
+          }
+        }
+  
+        span,
+        i {
+          display: block;
+          text-align: center;
+          color: #ccc;
+        }
+  
+        .scroll_text {
+          span {
+            line-height: 20px;
+            font-size: 22px;
+          }
+        }
+  
+        .down_icon {
+          padding-top: 10px;
+  
+          i {
+            font-size: 28px;
+            font-weight: 700;
+            line-height: 30px;
+  
+          }
+        }
+      }
+    }
+  }
+
+  .container {
+    width: 100%;
+    margin: auto;
+  }
+
+  #profile {
+    .row {
+      flex-direction: column;
+
+      .profile_img {
+        width: 380px;
+        margin: 0 auto;
+
+        img {
+          display: block;
+          width: 100%;
+          height: 450px;
         }
       }
     }
