--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -93,6 +93,7 @@ h5 {
   background: url(../images/background.png);
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden;
 
   .intro_box {
     height: 100%;
@@ -356,13 +357,13 @@ h5 {
       flex-direction: column;
 
       .profile_img {
-        width: 380px;
+        width: calc(100% - 80px);
         margin: 0 auto;
 
         img {
           display: block;
           width: 100%;
-          height: 450px;
+          height: 470px;
         }
       }
     }
