--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -304,43 +304,43 @@ h5 {
       .down {
         position: absolute;
         animation: ani 2s infinite;
-  
+
         @keyframes ani {
           0% {
             bottom: 25px;
           }
-  
+
           40% {
             bottom: 10px;
           }
-  
+
           100% {
             bottom: 25px;
           }
         }
-  
+
         span,
         i {
           display: block;
           text-align: center;
           color: #ccc;
         }
-  
+
         .scroll_text {
           span {
             line-height: 20px;
             font-size: 22px;
           }
         }
-  
+
         .down_icon {
           padding-top: 10px;
-  
+
           i {
             font-size: 28px;
             font-weight: 700;
             line-height: 30px;
-  
+
           }
         }
       }
@@ -363,9 +363,19 @@ h5 {
         img {
           display: block;
           width: 100%;
-          height: 470px;
+          height: 100%
         }
       }
+
+      .about_me {
+        margin-top: 20px;
+        margin-left: 10px;
+      }
+    }
+
+    .education {
+      margin-top: 30px;
+      margin-left: 10px;
     }
   }
 }
