--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -228,6 +228,7 @@ h5 {
     .tit {
       font-weight: bolder;
       font-size: 24px;
+      color: #000;
     }
 
     .profile_img {
@@ -259,7 +260,7 @@ h5 {
       }
 
       .certificate {
-        margin-top: 40px;
+        margin-top: 50px;
       }
     }
   }
@@ -276,16 +277,42 @@ h5 {
 
   .skill_box {
     display: flex;
-    
+    justify-content: space-between;
+
     .skill_left {
-      display: flex;
-      >div {
-        width: 200px;
-        line-height: 200px;
-        text-align: center;
-        border: 1px solid black;
-        border-radius: 50%;
+
+      ul {
+        display: flex;
+        flex-wrap: wrap;
+
+        li {
+          display: flex;
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          width: 150px;
+          height: 150px;
+          line-height: 2;
+          text-align: center;
+          border: 1px solid black;
+          border-radius: 50%;
+          margin-right: 10px;
+
+          &:last-child {
+            margin-right: 0;
+          }
+
+          p {
+            font-size: 20px;
+          }
+
+        }
       }
+
+
+
+
+
     }
 
   }
