--- a/CSS/main.css
+++ b/CSS/main.css
@@ -225,7 +225,6 @@ h5 {
 }
 #skill .skill_box {
   display: flex;
-  justify-content: space-between;
 }
 #skill .skill_box .skill_left ul {
   display: flex;
@@ -250,7 +249,42 @@ h5 {
 #skill .skill_box .skill_left ul li p {
   font-size: 20px;
 }
-
+#skill .skill_box .skill_right {
+  width: 75%;
+}
+#skill .skill_box .skill_right > div {
+  background-color: rgb(248, 248, 248);
+  border: 1px solid #000;
+  cursor: pointer;
+  margin-bottom: 15px;
+}
+#skill .skill_box .skill_right > div:last-child {
+  margin-bottom: 0;
+}
+#skill .skill_box .skill_right > div .skill_header {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+#skill .skill_box .skill_right > div .skill_header img {
+  height: 75px;
+}
+#skill .skill_box .skill_right > div .skill_header p {
+  font-size: 32px;
+  font-weight: 700;
+}
+#skill .skill_box .skill_right > div .skill_header i {
+  position: absolute;
+  font-size: 25px;
+  right: 20px;
+}
+#skill .skill_box .skill_right > div .skill_text {
+  overflow: hidden;
+}
+#skill .skill_box .skill_right > div .skill_text p {
+  padding: 15px 30px;
+  font-size: 16px;
+}
 @media (max-width: 1280px) {
   #intro .intro_box span {
     font-size: 40px;
@@ -307,7 +341,8 @@ h5 {
   }
   .container {
     width: 100%;
-    margin: auto;
+    margin: 0;
+    padding: 0 40px;
   }
   #profile .row {
     flex-direction: column;
@@ -317,7 +352,7 @@ h5 {
     font-size: 18px;
   }
   #profile .row .profile_img {
-    width: calc(100% - 80px);
+    width: 100%;
     margin: 0 auto;
     padding: 0;
   }
@@ -327,9 +362,15 @@ h5 {
     height: 100%;
   }
   #profile .row .about_me {
-    margin: 20px 0px 20px 40px;
+    margin: 20px 0;
   }
   #profile .education {
-    margin: 0 0 0 40px;
+    margin: 0;
+  }
+  #skill .skill_box {
+    flex-direction: column;
+  }
+  #skill .skill_box .skill_right {
+    width: 100%;
   }
 }/*# sourceMappingURL=main.css.map */
