--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -326,6 +326,7 @@ h5 {
           position: relative;
           display: flex;
           align-items: center;
+          padding: 5px 10px;
 
           img {
             height: 75px;
