--- a/CSS/main.css
+++ b/CSS/main.css
@@ -71,6 +71,12 @@ h5 {
   width: 1280px;
   margin: 0 auto;
 }
+.container h1 {
+  text-align: center;
+  font-size: 55px;
+  padding-bottom: 40px;
+  color: green;
+}
 
 #intro {
   display: flex;
@@ -176,12 +182,6 @@ h5 {
 #profile {
   padding: 60px 0;
 }
-#profile h1 {
-  text-align: center;
-  font-size: 55px;
-  padding-bottom: 40px;
-  color: green;
-}
 #profile .row {
   display: flex;
   justify-content: space-between;
@@ -217,11 +217,8 @@ h5 {
   margin-top: 50px;
 }
 
-#skill h1 {
-  text-align: center;
-  font-size: 55px;
-  padding-bottom: 40px;
-  color: green;
+#skill {
+  padding: 60px 0;
 }
 #skill .skill_box {
   display: flex;
