--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -78,6 +78,13 @@ h5 {
 .container {
   width: 1280px;
   margin: 0 auto;
+
+  h1 {
+    text-align: center;
+    font-size: 55px;
+    padding-bottom: 40px;
+    color: green;
+  }
 }
 
 // 인트로코드
@@ -209,13 +216,6 @@ h5 {
 #profile {
   padding: 60px 0;
 
-  h1 {
-    text-align: center;
-    font-size: 55px;
-    padding-bottom: 40px;
-    color: green;
-  }
-
   .row {
     display: flex;
     justify-content: space-between;
@@ -268,12 +268,7 @@ h5 {
 
 
 #skill {
-  h1 {
-    text-align: center;
-    font-size: 55px;
-    padding-bottom: 40px;
-    color: green;
-  }
+  padding: 60px 0;
 
   .skill_box {
     display: flex;
