--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -248,8 +248,6 @@ h5 {
       ul {
         li {
           margin-bottom: 15px;
-
-
         }
       }
     }
@@ -321,10 +319,10 @@ h5 {
           position: relative;
           display: flex;
           align-items: center;
-          padding: 5px 10px;
+          padding: 5px 15px;
 
           img {
-            height: 75px;
+            width: 130px;
           }
 
           p {
@@ -344,15 +342,29 @@ h5 {
 
           p {
             padding: 15px 30px;
-            font-size: 16px;
+            font-size: 18px;
           }
         }
-
-
       }
+    }
+  }
+}
 
-      ul {
-        li {}
+#project {
+  .project-Swiper {
+    margin: 0 60px;
+
+    .swiper-wrapper {
+
+      .swiper-slide {
+        overflow: hidden;
+
+
+        img {
+          width: 100%;
+          height: 400px;
+          box-shadow: 0 0 5px #555;
+        }
       }
     }
   }
@@ -492,6 +504,38 @@ h5 {
 
       .skill_right {
         width: 100%;
+        margin-top: 20px;
+
+        >div {
+          .skill_header {
+            img {
+              width: 80px;
+            }
+
+            p {
+              font-size: 22px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #project {
+    .project-Swiper {
+      margin: 0;
+
+      .swiper-wrapper {
+
+        .swiper-slide {
+          overflow: hidden;
+
+          img {
+            width: 100%;
+            height: 400px;
+            box-shadow: 0 0 5px #555;
+          }
+        }
       }
     }
   }
