--- a/CSS/main.css
+++ b/CSS/main.css
@@ -252,7 +252,6 @@ h5 {
 #skill .skill_box .skill_right > div {
   background-color: rgb(248, 248, 248);
   border: 1px solid #000;
-  cursor: pointer;
   margin-bottom: 15px;
 }
 #skill .skill_box .skill_right > div:last-child {
@@ -263,6 +262,7 @@ h5 {
   display: flex;
   align-items: center;
   padding: 5px 15px;
+  cursor: pointer;
 }
 #skill .skill_box .skill_right > div .skill_header img {
   width: 130px;
@@ -284,6 +284,9 @@ h5 {
   font-size: 18px;
 }
 
+#project {
+  padding: 60px 0;
+}
 #project .project-Swiper {
   margin: 0 60px;
 }
@@ -294,6 +297,47 @@ h5 {
   width: 100%;
   height: 400px;
   box-shadow: 0 0 5px #555;
+}
+
+#contact {
+  margin: 80px 0;
+}
+#contact h1 {
+  padding-bottom: 20px;
+}
+#contact .contact_box {
+  width: 900px;
+  margin: 0 auto;
+  padding: 20px 100px 80px 100px;
+  border: 2px solid #777;
+}
+#contact .contact_box ul li {
+  display: flex;
+  align-items: center;
+  margin-bottom: 25px;
+}
+#contact .contact_box ul li:last-child {
+  margin-bottom: 0;
+  justify-content: center;
+  padding-top: 20px;
+}
+#contact .contact_box ul li:last-child p {
+  font-size: 30px;
+  font-weight: 700;
+}
+#contact .contact_box ul li img {
+  width: 50px;
+  height: 35px;
+  padding-right: 10px;
+}
+#contact .contact_box ul li span {
+  font-weight: 700;
+  font-size: 28px;
+}
+#contact .contact_box ul li p,
+#contact .contact_box ul li a {
+  font-size: 26px;
+  font-weight: 400;
 }
 
 @media (max-width: 1280px) {
