--- a/CSS/main.css
+++ b/CSS/main.css
@@ -49,7 +49,7 @@ h5 {
   top: 0;
   left: 0;
   background: none;
-  background-color: rgba(204, 204, 204, 0.9);
+  background-color: transparent;
   z-index: 9999;
 }
 .header ul {
@@ -82,8 +82,9 @@ h5 {
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url(../images/background.png);
+  background: url(../images/bg_prdInfo_top.jpg);
   background-repeat: no-repeat;
+  background-position: center;
   background-size: cover;
   overflow: hidden;
 }
@@ -261,14 +262,15 @@ h5 {
   position: relative;
   display: flex;
   align-items: center;
-  padding: 5px 15px;
+  padding: 10px 20px;
   cursor: pointer;
 }
 #skill .skill_box .skill_right > div .skill_header img {
-  width: 130px;
+  width: 60px;
+  padding-right: 15px;
 }
 #skill .skill_box .skill_right > div .skill_header p {
-  font-size: 32px;
+  font-size: 26px;
   font-weight: 700;
 }
 #skill .skill_box .skill_right > div .skill_header i {
@@ -280,7 +282,7 @@ h5 {
   overflow: hidden;
 }
 #skill .skill_box .skill_right > div .skill_text p {
-  padding: 15px 30px;
+  padding: 15px 20px;
   font-size: 18px;
 }
 
@@ -293,23 +295,54 @@ h5 {
 #project .project-Swiper .swiper-wrapper .swiper-slide {
   overflow: hidden;
 }
-#project .project-Swiper .swiper-wrapper .swiper-slide img {
+#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img img {
+  position: relative;
   width: 100%;
-  height: 400px;
-  box-shadow: 0 0 5px #555;
+  height: 700px;
+}
+#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+#project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p img {
+  width: 100%;
+  height: 530px;
+  padding: 10px;
 }
 
 #contact {
-  margin: 80px 0;
+  background-color: #1f1f1f;
+  margin: 80px 0 0 0;
+  padding: 50px 0;
 }
 #contact h1 {
+  text-align: center;
+  font-size: 55px;
+  padding-bottom: 40px;
+  color: green;
   padding-bottom: 20px;
 }
 #contact .contact_box {
   width: 900px;
   margin: 0 auto;
   padding: 20px 100px 80px 100px;
-  border: 2px solid #777;
+  background-color: #fff;
+  transition: 0.1s;
+  animation: ania 2s infinite;
+  box-shadow: 0 0 15px #eee;
+}
+@keyframes ania {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
 }
 #contact .contact_box ul li {
   display: flex;
