--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -82,24 +82,63 @@ h5 {
   h1 {
     text-align: center;
     font-size: 55px;
-    padding-bottom: 40px;
+    padding-bottom: 50px;
     color: green;
   }
 }
 
 // 인트로코드
 #intro {
+  position: relative;
   display: flex;
   width: 100%;
   height: 100vh;
-  background: url(../images/bg_prdInfo_top.jpg);
-  background-repeat: no-repeat;
-  background-position: center;
+  background: url(../images/141538b38ba7a798a78c9dd2c55f79d7.png);
   background-size: cover;
-  overflow: hidden;
+  background-position: 50% 100%;
+  background-repeat: no-repeat;
+
+
+  .intro_img {
+    position: relative;
+
+    &::after {
+      position: absolute;
+      top: 17px;
+      left: 27px;
+      content: '';
+      display: block;
+      width: 325px;
+      height: 325px;
+      border-radius: 50%;
+      box-shadow: 0 0 20px #fff;
+      animation: moonani 30s infinite linear;
+      opacity: 0.7;
+    }
+
+    img {
+      position: absolute;
+      top: -45px;
+      left: -110px;
+      width: 600px;
+      animation: moonani 30s infinite linear;
+      opacity: 0.9;
+    }
+
+    @keyframes moonani {
+      100% {
+        transform: rotate(360deg);
+      }
+
+    }
+
+
+  }
 
   .intro_box {
+    position: relative;
     height: 100%;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -109,11 +148,14 @@ h5 {
       font-size: 50px;
       font-weight: 700;
       color: #fff;
-      letter-spacing: 2px;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px #000, 3px 3px #000;
 
       .under {
         position: relative;
         font-size: 60px;
+        color:rgba(151, 19, 228, 0.87);
+        text-shadow: 2px 2px #000, 3px 3px #000;
       }
 
       .under::before {
@@ -167,46 +209,50 @@ h5 {
 
     .down {
       position: absolute;
-      bottom: 60px;
-      animation: ani 2s infinite;
+      bottom: 70px;
+      animation: ani 1.5s infinite;
 
       @keyframes ani {
         0% {
-          bottom: 60px;
+          bottom: 70px;
         }
 
-        40% {
+        50% {
           bottom: 40px;
         }
 
         100% {
-          bottom: 60px;
+          bottom: 70px;
         }
       }
 
-      span,
+      .scroll {
+        position: absolute;
+        top: -70px;
+        left: -3px;
+        width: 40px;
+        height: 60px;
+        border-radius: 30px;
+        border: 5px solid #fff;
+
+        &::after {
+          content: '';
+          position: absolute;
+          left: 45%;
+          display: block;
+          width: 3px;
+          height: 25px;
+          background-color: #fff;
+        }
+      }
+
       i {
+        padding-top: 5px;
+        font-size: 34px;
+        font-weight: 700;
+        line-height: 20px;
         display: block;
-        text-align: center;
-        color: #ccc;
-      }
-
-      .scroll_text {
-        span {
-          line-height: 25px;
-          font-size: 26px;
-        }
-      }
-
-      .down_icon {
-        padding-top: 10px;
-
-        i {
-          font-size: 34px;
-          font-weight: 700;
-          line-height: 30px;
-
-        }
+        color: #fff;
       }
     }
   }
@@ -215,10 +261,11 @@ h5 {
 
 // 프로필
 #profile {
-  padding: 60px 0;
+  margin: 80px 0 120px 0;
 
   .row {
     display: flex;
+    align-items: center;
     justify-content: space-between;
 
     p,
@@ -227,39 +274,54 @@ h5 {
     }
 
     .tit {
-      font-weight: bolder;
+      font-weight: 700;
       font-size: 24px;
       color: #000;
     }
 
     .profile_img {
       width: 380px;
-      padding-top: 30px;
 
       img {
-        display: block;
         width: 100%;
-        height: 500px;
+        height: 490px;
       }
     }
 
     .about_me {
-      margin-left: 20px;
 
       ul {
         li {
-          margin-bottom: 15px;
+          display: flex;
+          align-items: center;
+          margin-bottom: 32px;
+
+          p {
+            padding-left: 5px;
+
+            &.tit {
+              padding-left: 0;
+            }
+          }
+
+          &:last-child {
+            margin-bottom: 0;
+          }
         }
       }
     }
 
     .education {
       p {
+        .tit {
+          margin-bottom: 10px;
+        }
+
         margin-bottom: 5px;
       }
 
       .certificate {
-        margin-top: 50px;
+        margin-top: 30px;
       }
     }
   }
@@ -268,7 +330,7 @@ h5 {
 
 //능력사항
 #skill {
-  padding: 60px 0;
+  margin: 0 0 100px 0;
 
   .skill_box {
     display: flex;
@@ -357,7 +419,7 @@ h5 {
 
 //프로젝트
 #project {
-  padding: 60px 0;
+  margin: 0 0 100px 0;
 
   .project-Swiper {
     margin: 0 60px;
@@ -392,7 +454,6 @@ h5 {
         }
       }
 
-
     }
   }
 }
@@ -401,8 +462,7 @@ h5 {
 //contact
 #contact {
   background-color: #1f1f1f;
-  margin: 80px 0 0 0;
-  padding: 50px 0;
+  padding: 80px 0;
 
   h1 {
     text-align: center;
