--- a/CSS/main.css
+++ b/CSS/main.css
@@ -93,7 +93,7 @@ h5 {
 }
 #intro .intro_img::after {
   position: absolute;
-  top: 17px;
+  top: 19px;
   left: 27px;
   content: "";
   display: block;
@@ -359,13 +359,14 @@ h5 {
   left: 0;
 }
 #project .project-Swiper .swiper-wrapper .swiper-slide .prject_box .project_img p img {
-  width: 100%;
+  width: 90%;
   height: 530px;
-  padding: 10px;
+  margin: 0 auto;
+  padding: 15px 0px;
 }
 
 #contact {
-  background-color: #1f1f1f;
+  background-color: #053d5c;
   padding: 80px 0;
 }
 #contact h1 {
