--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -334,11 +334,15 @@ h5 {
 //능력사항
 #skill {
   margin: 0 0 100px 0;
-
+  padding: 50px 0;
   .skill_box {
     display: flex;
 
     .skill_left {
+
+      h2 {
+        font-size: 35px;
+      }
 
       ul {
         display: flex;
@@ -349,20 +353,21 @@ h5 {
           justify-content: center;
           flex-direction: column;
           align-items: center;
-          width: 150px;
-          height: 150px;
+          width: 200px;
+          height: 200px;
           line-height: 2;
           text-align: center;
           border: 1px solid black;
           border-radius: 50%;
-          margin-right: 10px;
+          margin-right: 15px;
+          margin-bottom: 15px;
 
           &:last-child {
             margin-right: 0;
           }
 
           p {
-            font-size: 20px;
+            font-size: 24px;
           }
 
         }
@@ -374,7 +379,7 @@ h5 {
 
       >div {
         background-color: rgba(248, 248, 248, 1);
-        border: 1px solid #000;
+        border: 1px solid #777;
         margin-bottom: 15px;
 
         &:last-child {
@@ -385,7 +390,7 @@ h5 {
           position: relative;
           display: flex;
           align-items: center;
-          padding: 10px 20px;
+          padding: 15px 30px;
           cursor: pointer;
 
           img {
@@ -407,6 +412,8 @@ h5 {
 
         .skill_text {
           overflow: hidden;
+          height: 0;
+          transition: height 0.3s;
 
           p {
             padding: 15px 20px;
@@ -465,7 +472,7 @@ h5 {
 
 //contact
 #contact {
-  background-color: #053d5c;
+  background-color: #053d5cd9;
   padding: 80px 0;
 
   h1 {
