포트폴리오

--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -153,8 +153,8 @@ h5 {
 
       .under {
         position: relative;
-        font-size: 60px;
-        color: rgba(151, 19, 228, 0.87);
+        font-size: 70px;
+        color: cornflowerblue;
         text-shadow: 2px 2px #000, 3px 3px #000;
       }
 
