--- a/CSS/main.css
+++ b/CSS/main.css
@@ -135,8 +135,8 @@ h5 {
 }
 #intro .intro_box span .under {
   position: relative;
-  font-size: 60px;
-  color: rgba(151, 19, 228, 0.87);
+  font-size: 70px;
+  color: cornflowerblue;
   text-shadow: 2px 2px #000, 3px 3px #000;
 }
 #intro .intro_box span .under::before {
