--- a/CSS/main.scss
+++ b/CSS/main.scss
@@ -566,7 +566,8 @@ h5 {
   border-radius: 50%;
   background-color: #fff;
   cursor: pointer;
-
+  z-index: 9999;
+  
   i {
     font-size: 50px;
     transition: .3s;
